Fix grid overflowing and squares not scaling size properly

--- a/styles.css
+++ b/styles.css
@@ -12,23 +12,24 @@ body {
     gap: 20px;
 }
 
-.row {
-    height: 6.25%;
-    display: flex;
-    flex-direction: row;
-}
-
-.square {
-    flex-basis: 6.25%;
-    border: solid 1px black;
-}
-
 #canvas {
     border: 3px solid rgb(10, 10, 10);
     width: 500px;
     height: 500px;
 
+    display: flex;
+    flex-direction: column;
 }
+
+.row {
+    flex: 1;
+    display: flex;
+}
+
+.square {
+    flex: 1;
+}
+
 
 .color {
     background-color: black;
